--- a/test.html
+++ b/test.html
@@ -11,58 +11,39 @@
   <div id="mocha"></div>
 
   <script>
-    mocha.setup('bdd');
-    const expect = chai.expect;
-  </script>
+    window.addEventListener('load', function () {
+      mocha.setup('bdd');
+      const expect = chai.expect;
 
-  <script>
-    function kmToMiles(km) {
-      return km * 0.621371;
-    }
-  </script>
+      // Funktion definieren
+      function kmToMiles(km) {
+        return km * 0.621371;
+      }
 
-  <script>
-    describe('kmToMiles()', function () {
-  
-      // Testfall 1: Normale Umrechnung 1 km in Meilen
-      it('sollte 1 Kilometer korrekt in Meilen umrechnen', function () {
-        // GIVEN
-        const input = 1;
-  
-        // WHEN 
-        const result = kmToMiles(input);
-  
-        // THEN 
-        expect(result).to.be.closeTo(0.621371, 0.000001);
+      // Tests definieren
+      describe('kmToMiles()', function () {
+
+        it('sollte 1 Kilometer korrekt in Meilen umrechnen', function () {
+          const input = 1;
+          const result = kmToMiles(input);
+          expect(result).to.be.closeTo(0.621371, 0.000001);
+        });
+
+        it('sollte 0 Kilometer korrekt behandeln', function () {
+          const input = 0;
+          const result = kmToMiles(input);
+          expect(result).to.equal(0);
+        });
+
+        it('sollte auch mit Kommazahlen funktionieren', function () {
+          const input = 2.5;
+          const result = kmToMiles(input);
+          expect(result).to.be.closeTo(1.5534275, 0.000001);
+        });
       });
-  
-      // Testfall 2: Spezialfall 0 km
-      it('sollte 0 Kilometer korrekt behandeln', function () {
-        // GIVEN
-        const input = 0;
-  
-        // WHEN
-        const result = kmToMiles(input);
-  
-        // THEN
-        expect(result).to.equal(0);
-      });
-  
-      // Testfall 3: Dezimalwerte verarbeiten
-      it('sollte auch mit Kommazahlen funktionieren', function () {
-        // GIVEN
-        const input = 2.5;
-  
-        // WHEN
-        const result = kmToMiles(input);
-  
-        // THEN
-        expect(result).to.be.closeTo(1.5534275, 0.000001);
-      });
+
+      mocha.run();
     });
-  
-    mocha.run();
   </script>
-  
 </body>
 </html>
