--- a/test.html
+++ b/test.html
@@ -5,7 +5,17 @@
   <title>KM → Meilen Test</title>
   <link href="https://cdn.jsdelivr.net/npm/mocha/mocha.css" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; padding: 20px; }
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+    }
+  
+    #mocha {
+      margin-top: 30px;
+      background: #f3f3f3;
+      padding: 20px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
