--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <input type="number" id="kmInput" placeholder="Kilometer eingeben" />
   <button onclick="convert()">Umrechnen</button>
   <p id="output"></p>
+  <p>
+    <a href="test.html">Zu den Tests</a>
+  </p>
 
   <script>
     function kmToMiles(km) {
