--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>KM → Meilen Test</title>
+  <title>KM in Meilen Test</title>
   <link href="https://cdn.jsdelivr.net/npm/mocha@10.2.0/mocha.min.css" rel="stylesheet" />
   <style>
     body {
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>KM → Meilen: Unit Tests</h1>
+  <h1>KM in Meilen: Unit Tests</h1>
   <div id="mocha"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/mocha@10.2.0/mocha.min.js"></script>
